[package]
name = "rtmp-ingress"
version = "0.1.0"
edition = "2021"

[features]
default = []
upload-response = ["dep:upload-response", "dep:http-pack"]

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
bytes = "1"
chrono = "0.4.38"
rml_rtmp = { git = "ssh://git@github.com/wavey-ai/rust-media-libs.git" }
tracing = "0.1.40"
futures = "0.3.30"
xmpegts = { git = "ssh://git@github.com/wavey-ai/xiu" }
mse_fmp4 = { git = "ssh://git@github.com/wavey-ai/mse_fmp4.git" }
srt-tokio = "0.4.4"
tokio-stream = "0.1.15"
access-unit = "0.1.1"
gatekeeper = { git = "ssh://git@github.com/wavey-ai/gatekeeper.git" }

# Optional deps for upload-response integration
upload-response = { path = "../web-services/upload-response", optional = true }
http-pack = { path = "../http-pack", optional = true }
